# Arktos

./: .gitignore  .gitmodules  Arktos.sln  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codecov.yml  coverage.yml
Arktos/: Arktos.vcxproj  Arktos.vcxproj.filters  CMakeLists.txt
Arktos/apps/: CMakeLists.txt  app.cpp
Arktos/include/: Arktos.h
Arktos/include/Arktos/: Log.h
Arktos/include/Arktos/Maths/: BaseVec.h  Vec.h  Vec3.h
Arktos/include/Arktos/Physics/: Constants.h  Nbody.h  System.h
Arktos/src/: Arktos.cpp  Arktos.h  CMakeLists.txt  app.cpp
Arktos/src/Arktos/: Application.cpp  Application.h  EntryPoint.h  Log.cpp  Log.h  core.h
Arktos/src/Arktos/Maths/: Vec.cpp  Vec.h
Arktos/src/Arktos/Physics/: Constants.cpp  Nbody.cpp  Nbody.h  System.cpp  System.h
Arktos/tests/: CMakeLists.txt
Arktos/tests/Arktos/Maths/: BaseVecTest.cpp  Vec3Test.cpp  VecTest.cpp
Arktos/tests/Arktos/Physics/: NbodyTest.cpp  SystemTest.cpp
Eos/: CMakeLists.txt
Eos/apps/: CMakeLists.txt  main.cu
Eos/include/: Eos.cuh
Eos/include/Eos/: particle.cuh  v3.cuh
Eos/src/: CMakeLists.txt  main.cu
Eos/src/Eos/: particle.cu  v3.cu
Ichnea/: CMakeLists.txt
Ichnea/include/: Ichnea.h
Ichnea/include/Ichnea/: EntryPoint.h  Log.h
Ichnea/src/: CMakeLists.txt
Ichnea/src/Ichnea/: Log.cpp
Sandbox/: Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
Utility/: CMakeLists.txt
Utility/app/: CMakeLists.txt  app.cpp
modules/: CoverallsGenerateGcov.cmake  FindCorrade.cmake  FindIchnea.cmake
scripts/Windows/: MakeBuildDIR.bat
